--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -80,13 +80,14 @@
 <p>（本文参考了CNN的报导。）</p>
 <p>责任编辑：林妍#</p>
 	
+
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414310.md#1">川普就职典礼在即 七大要点一文看懂</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418132.md#1">普京愿意与川普政府合作 就俄乌战对话</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418124.md#1">组图：拜登夫妇欢迎川普夫妇重返白宫</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418042.md#1">川普宣誓就职前 拜登再赦免四人</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/22/n9758393.md#1" target="_blank">刘晓：中共吹捧的商鞅非良臣 创万世恶法</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/7/16/n8107028.md#1" target="_blank">澳洲出新书 探究法轮功健身奇效背后奥秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/8/n9819782.md#1" target="_blank">布拉格共产主义受难者纪念碑背后故事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11488663.md#1" target="_blank">寻获生命真谛 法国医院院长分享修炼感悟</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405076.md#1">人算不如天算 嫉妒心反害了自身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781563.md#1">在宋朝作诗能转运？宋祁错失状元得赐婚</a></li>
